Fix build types and add cloud sync env

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": [],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "types": ["vite/client", "babel__generator", "babel__template", "babel__traverse", "babel__core"],
 
     /* Linting */
     "strict": true,
